fix aligns

--- a/src/components/Pages/Archive/WinnerList/WinnerList.module.css
+++ b/src/components/Pages/Archive/WinnerList/WinnerList.module.css
@@ -17,4 +17,6 @@
 	padding: 3px 24px;
 	background: linear-gradient(45deg, #0055fc 0%, #508bff 100%);
 	border-radius: 100px;
+	display: flex;
+	align-items: center;
 }
